# lcc-3ano-2semestre

./: ExMT3.docx
Projeto CG/phase1/engine/: CMakeLists.txt  engine.cpp
Projeto CG/phase1/generator/: CMakeLists.txt  generator.cpp
Projeto CG/phase1/relatorio/: Relatorio_P1.docx
Projeto CG/phase2/engine/: engine.cpp
Projeto CG/phase2/engine/test_files/test_files_phase_2/: sistema_solar.xml
Projeto CG/phase2/generator/: generator.cpp
Projeto CG/phase2/relatorio/: Relatorio_P2.docx
Projeto CG/phase3/engine/: CMakeLists.txt  engine.cpp
Projeto CG/phase3/engine/test_files/test_files_phase_3/: sistema_solar.xml
Projeto CG/phase3/generator/: generator.cpp
Projeto CG/phase3/relatorio/: Relatorio_P3.docx
Projeto CG/phase4/engine/: CMakeLists.txt  engine.cpp
Projeto CG/phase4/engine/test_files/test_files_phase_2/: sistema_solar.xml
Projeto CG/phase4/engine/test_files/test_files_phase_4/: sistema_solar.xml
Projeto CG/phase4/generator/: generator.cpp
Projeto CG/phase4/relatorio/: Relatorio_P4.docx
aulatp1/class_code/: main.cpp
aulatp10/code(5)/: main.cpp
aulatp11/code(11)/: main.cpp
aulatp2/code(1)(1)/: main.cpp
aulatp3/code(1)/: main.cpp
aulatp4/code(3)/: main.cpp
aulatp5/code5/: main.cpp
aulatp6/code6/: main.cpp
aulatp7/code7/: main.cpp
aulatp8/code(2)/: main.cpp
aulatp9/code(7)/: main.cpp
